--- a/src/Resources/views/message_partial.twig
+++ b/src/Resources/views/message_partial.twig
@@ -6,7 +6,7 @@
     {% endfor %}
 
     {% if event.has_registrations_within_deadline %}
-        {{ 'MSC.serr_these_registrations_are_also_pending'|trans({}, 'contao_default') }}
+        {{ 'MSC.serr_these_registrations_are_also_pending'|trans({}, 'contao_default', user_locale) }}
     {% for registration in event.registrations_within_deadline %}
     - {{ registration.trans.participant }} {{ registration.firstname }} {{ registration.lastname }}, {{ registration.sac_member_id }} (seit {{ registration.registered_since }} Tag/Tagen)
     {% endfor %}
